--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,7 @@
     <header>
         <button id="theme-toggle">Byt tema</button>
         <h1>HimlaKul</h1>
-        <h2>En app för att upptäcka världen i alla väder</h2>
-
-        
+        <!-- <h2>En app för att upptäcka världen i alla väder</h2> -->        
     </header>
 
     <main>
