--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <link rel="stylesheet" href="css/main.scss">
-    <script type="module" src="js/main.js" defer></script>
+    <script type="module" src="js/main.js" ></script>
     <!--<script type="module" src="js/mobilemeny.js"></script> -->
     <script type="module" src="js/themeswitcher.js"></script>
 </head>
