Rättad efter wave saknade label

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,8 @@
                         <label for="catering.restaurant" class="smalltext">Restaurang</label>
                     </div>
                 </fieldset>
-                <input type="text" id="search-box" placeholder="Ange stad/ort">
+                <input type="text" id="search-box" name="search-box" placeholder="Ange stad/ort" title="Välj plats att söka efter">
+                <label for="search-box" id="searchlbl">Välj plats att söka efter</label>
                 <button id="placeToSearch">Sök</button>
                 <button id="myLocation" title="Upptäck nära mig!">Nära mig!</button>
                 <button id="toggleForecast" title="För att se mer en olika sevärdheter och event kan du även se vädret för stunden och 12 timmar framåt!">Visa väder</button>
