Ändrat text på index.html

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
                 <label for="search-box" id="searchlbl">Välj plats att söka efter</label>
                 <button id="placeToSearch">Sök</button>
                 <button id="myLocation" title="Upptäck nära mig!">Nära mig!</button>
-                <button id="toggleForecast" title="För att se mer en olika sevärdheter och event kan du även se vädret för stunden och 12 timmar framåt!">Visa väder</button>
+                <button id="toggleForecast" title="Se vädret för stunden och 12 timmar framåt!">Visa väder</button>
             </div>
             <div id="map" ></div>
         </section>
