Ändrat header i yr.nu api

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 <body>
     <header>
         <button id="theme-toggle">Byt tema</button>
-        <h1>HimlaKula</h1>
+        <h1>HimlaKul</h1>
         <!-- <h2>En app för att upptäcka världen i alla väder</h2> -->        
     </header>
 
